tests/integration/pilot/test_artifacts/pilot-cdb63eb262f9489794e3c1898/TestTraffic/serverfirst/auto-tcp-server:ISTIO_MUTUAL/DISABLE/_test_context/DestinationRule-PeerAuthentication.1399895108.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: c
  namespace: echo-2-88348
spec:
  host: c
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: c
  namespace: echo-2-88348
spec:
  mtls:
    mode: DISABLE
  selector:
    matchLabels:
      app: c
